Add basic login and call to api

--- a/flutter_launcher_icons.yaml
+++ b/flutter_launcher_icons.yaml
@@ -1,7 +1,7 @@
 flutter_launcher_icons:
   image_path: "assets/icon.png"
   adaptive_icon_foreground: "assets/icon-adaptive.png"
-  adaptive_icon_background: "#D60323"
+  adaptive_icon_background: "#FFFFFF"
   android: true
   ios: true
   remove_alpha_ios: true
