--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   firebase_core: ^4.0.0
   firebase_auth: ^6.0.0
   http: ^1.3.0
+  package_info_plus: ^8.3.0
+  shared_preferences: ^2.5.3
+  provider: ^6.1.5
 
 dev_dependencies:
   flutter_test:
