--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 0.1.0+4
+version: 0.1.0+5
 
 environment:
   sdk: ^3.7.2
@@ -40,6 +40,10 @@ dependencies:
   package_info_plus: ^8.3.0
   shared_preferences: ^2.5.3
   provider: ^6.1.5
+  permission_handler: ^12.0.1
+  firebase_messaging: ^16.0.0
+  firebase_crashlytics: ^5.0.0
+  firebase_analytics: ^12.0.0
 
 dev_dependencies:
   flutter_test:
