--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,8 @@ migrate_working_dir/
 *.iml
 *.ipr
 *.iws
-.idea/
+.idea
+!.idea/codeStyles
 
 # The .vscode folder contains launch configuration and tasks you configure in
 # VS Code which you may wish to be included in version control, so this line
