--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   firebase_messaging: ^16.0.0
   firebase_crashlytics: ^5.0.0
   firebase_analytics: ^12.0.0
+  add_2_calendar_new: ^1.0.4
 
 dev_dependencies:
   flutter_test:
