--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -26,15 +26,17 @@
 	<string>$(FLUTTER_BUILD_NUMBER)</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSCalendarsUsageDescription</key>
+	<string>Diese App darf den Kalender verwenden, um Termine einzutragen.</string>
+	<key>NSContactsUsageDescription</key>
+	<string>Um Termine in den Kalender eintragen zu können.</string>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
-    <key>UIBackgroundModes</key>
-    <array>
-        <string>fetch</string>
-        <string>remote-notification</string>
-    </array>
-    <key>NSCalendarsUsageDescription</key>
-    <string>Diese App darf den Kalender verwenden, um Termine einzutragen.</string>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>remote-notification</string>
+		<string>fetch</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
