--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,10 +2,11 @@ name: mvu_platform
 description: "Musikverein Harmonie Urdorf"
 publish_to: 'none'
 
-version: 1.0.4+12
+version: 1.0.5+13
 
 environment:
-  sdk: ^3.7.2
+  sdk: ^3.9.0
+  flutter: ^3.35.2
 
 dependencies:
   flutter:
