--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ dependencies:
   firebase_core: ^4.1.0
   firebase_auth: ^6.0.2
   http: ^1.5.0
-  package_info_plus: ^8.3.1
+  package_info_plus: ^9.0.0
   shared_preferences: ^2.5.3
   provider: ^6.1.5
   permission_handler: ^12.0.1
@@ -24,6 +24,7 @@ dependencies:
   firebase_crashlytics: ^5.0.1
   firebase_analytics: ^12.0.1
   add_2_calendar_new: ^1.0.4
+  url_launcher: ^6.3.2
 
 dev_dependencies:
   flutter_test:
